--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Angular2Martes6</title>
+    <title>Bootcamp project</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <app-root>Loading...</app-root>
-
-
+    <app-root>
+        <div class="loader loader-default is-active" data-text="Loading"></div>
+    </app-root>
 </body>
 
 </html>
